--- a/package.json
+++ b/package.json
@@ -1,23 +1,21 @@
 {
-  "name": "espruino-ts-quickstart",
+  "name": "diy-gameboy",
   "version": "1.0.0",
-  "description": "Quickstart for Espruino using typescript and Visual Studio Code IDE",
-  "main": "app.js",
-  "repository": {
-    "url": "https://github.com/stasberkov/espruino-ts-quickstart"
-  },
+  "description": "Do-it-yourself Gameboy",
+  "main": "webpack.config.js",
   "scripts": {
+    "dist": "webpack",
+    "watch": "webpack --watch --env.entry ./devrun.ts",
+    "espruino": "espruino --watch dist/bundle.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Stanislav Berkov",
+  "author": "",
   "license": "ISC",
-  "dependencies": {
-    "espruino": "0.0.36",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^3.2.3",
-    "js-yaml": "^3.10.0",
-    "lodash": "^4.17.4",
-    "typescript": "^2.6.2",
-    "@types/espruino": "^1.94.0"
+  "devDependencies": {
+    "awesome-typescript-loader": "^3.4.1",
+    "espruino": "^0.1.4",
+    "ts-loader": "^3.5.0",
+    "typescript": "^2.7.1",
+    "webpack": "^3.10.0"
   }
 }
