--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,13 @@
     "target": "es5",
     "module": "commonjs",
     "lib": [
-      "es2015",
+      "es5",
       "dom" // setInterval, console
     ], 
-    "strict": true 
+    "strict": true,
+    "noImplicitAny": false
   },
   "include": [
-    "src/**/*.ts"
+    "**/*.ts"
   ]
 }
