Added basic Pong game, first attempt at persisting high scores (not working yet)

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dist": "webpack",
     "watch": "webpack --watch --env.entry ./devrun.ts",
     "espruino": "espruino --watch dist/bundle.js",
+    "connect": "espruino",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
